<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"

    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    >
    <TextView
        android:id="@+id/note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:gravity="right"
        android:textDirection="rtl"
        android:text="@string/note"
        android:textSize="16sp"
        android:textColor="@color/linkColor"
        android:layout_marginBottom="5dp"
        android:textStyle="bold"
        android:visibility="gone"
        />
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="5dp"
        app:cardCornerRadius="5dp"
        android:id="@+id/phone_container"

        >
        <EditText
            android:maxLength="11"
            android:id="@+id/alert_text_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:inputType="phone"
            android:gravity="right|center"
            android:hint="@string/phone_txt"
            android:background="@drawable/alert_txt"
            android:elevation="5dp"
            android:textSize="14sp"

            />

    </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="5dp"
        app:cardCornerRadius="5dp"
        android:layout_marginTop="5dp"
        >
        <EditText
            android:maxLength="11"
            android:id="@+id/alert_text_drug"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:inputType="text"
            android:gravity="right|center"
            android:hint="@string/Drugname"
            android:background="@drawable/alert_txt"
            android:textSize="14sp"
            />

    </android.support.v7.widget.CardView>



    <TextView

        android:id="@+id/alert_send_phonenumber"
        android:layout_marginTop="10dp"
        android:layout_gravity="right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SendNot"
        android:textSize="16sp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:textColor="@color/linkColor"
        android:lines="1"
        android:scrollHorizontally="true"

        />
    <TextView

        android:id="@+id/alert_cancelBtn"
        android:layout_marginTop="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:text="@string/CancelNot"
        android:textSize="16sp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"

        android:textColor="@color/linkColor"


        />
</LinearLayout>