<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"

    >
    <EditText

        android:id="@+id/Login_userPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edittext_style"
        android:hint="@string/phone_txt"
        android:padding="5dp"
        android:textDirection="rtl"
        android:drawableRight="@mipmap/phone"
        android:inputType="numberDecimal"
        android:maxLength="11"
        android:gravity="right|center"
        android:lines="1"
        android:scrollHorizontally="true"


        />

        <EditText
            android:id="@+id/Login_userPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_style"
            android:hint="@string/password_txt"
            android:padding="5dp"
            android:textDirection="rtl"
            android:drawableRight="@mipmap/password"
            android:inputType="textPassword"
            android:layout_marginTop="15dp"
            android:gravity="right|center"
            android:lines="1"
            android:scrollHorizontally="true"


            />


    <Button
        android:id="@+id/Login_logInBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/login_txt"
        android:padding="20dp"
        android:background="@drawable/button_pressed_state"
        android:textSize="18sp"
        android:layout_marginBottom="60dp"

        />
</LinearLayout>