<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardElevation="5dp"
    app:cardCornerRadius="5dp"
    app:cardBackgroundColor="#f5f5f5"
    >
    <LinearLayout  android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"
            android:gravity="right|center"
            android:padding="5dp"
            >
            <TextView
                android:id="@+id/user_notf_Drugstate"
                android:layout_width="0dp"
                android:layout_weight="1.5"
                android:layout_height="wrap_content"
                android:layout_gravity="center|right"
                android:gravity="right"

                />
            <TextView
                android:layout_width="0dp"
                android:layout_weight=".5"
                android:layout_height="wrap_content"
                android:text="@string/Drug_state"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"
            android:gravity="right|center"
            android:padding="5dp"
            >
            <TextView
                android:id="@+id/user_notf_Drugname"
                android:layout_width="0dp"
                android:layout_weight="1.5"
                android:layout_height="wrap_content"
                android:layout_gravity="center|right"
                android:gravity="right"

                />
            <TextView
                android:layout_width="0dp"
                android:layout_weight=".5"
                android:layout_height="wrap_content"
                android:text="@string/drug_name2"
                />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"
            android:gravity="right|center"
            android:padding="5dp"
            >
            <TextView
                android:id="@+id/user_notf_pharmacy_name"
                android:layout_width="0dp"
                android:layout_weight="1.5"
                android:layout_height="wrap_content"
                android:layout_gravity="center|right"
                android:gravity="right"

                />
            <TextView
                android:layout_width="0dp"
                android:layout_weight=".5"
                android:layout_height="wrap_content"
                android:text="@string/pharmacy_name_txt"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"
            android:gravity="right|center"
            android:padding="5dp"
            >
            <TextView
                android:id="@+id/user_notf_pharmacy_location"
                android:layout_width="0dp"
                android:layout_weight="1.5"
                android:layout_height="wrap_content"
                android:layout_gravity="center|right"
                android:gravity="right"

                />
            <TextView
                android:layout_width="0dp"
                android:layout_weight=".5"
                android:layout_height="wrap_content"
                android:text="@string/pharmacy_location_txt"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"
            android:gravity="right|center"
            android:padding="5dp"
            >
            <TextView
                android:id="@+id/user_notf_pharmacy_phone"
                android:layout_width="0dp"
                android:layout_weight="1.5"
                android:layout_height="wrap_content"
                android:layout_gravity="center|right"
                android:gravity="right"

                />
            <TextView
                android:layout_width="0dp"
                android:layout_weight=".5"
                android:layout_height="wrap_content"
                android:text="@string/pharmacy_phone"
                />
        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>
