<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<android.support.v7.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:cardElevation="3dp"
    app:cardCornerRadius="5dp"
    app:contentPadding="10dp"
    >
    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="right"
            android:src="@mipmap/delete_icon"
            android:layout_marginBottom="10dp"
            android:id="@+id/delete_drug_image"
            />
        <LinearLayout
            android:layout_marginTop="40dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"
            >

            <ImageView
                android:id="@+id/drug_image"
                android:layout_width="0dp"
                android:layout_weight=".6"
                android:layout_height="100dp"
                android:scaleType="centerCrop"
                android:layout_gravity="center|left"


                />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1.4"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2"
                >
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1.4"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    >
                    <TextView
                        android:id="@+id/drug_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:lines="1"
                        android:ellipsize="end"
                        android:gravity="right"
                        android:paddingBottom="5dp"
                        android:paddingTop="5dp"

                        />
                    <TextView
                        android:id="@+id/drug_concentrate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:lines="1"
                        android:ellipsize="end"
                        android:gravity="right"
                        android:layout_gravity="right"
                        android:paddingBottom="5dp"
                        android:paddingTop="5dp"

                        />
                    <TextView
                        android:id="@+id/drug_type"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:lines="1"
                        android:ellipsize="end"
                        android:gravity="right"
                        android:paddingBottom="5dp"
                        android:paddingTop="5dp"

                        />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight=".6"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    >
                    <TextView

                        android:paddingBottom="5dp"
                        android:paddingTop="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/drug_name2"
                        />
                    <TextView
                        android:paddingBottom="5dp"
                        android:paddingTop="5dp"

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/concentrateDrug_txt2"
                        />
                    <TextView
                        android:paddingBottom="5dp"
                        android:paddingTop="5dp"

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/drug_type2"
                        />
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</android.support.v7.widget.CardView>
</FrameLayout>